--- a/ProjectManagement/wwwroot/pages-css/add-project.css
+++ b/ProjectManagement/wwwroot/pages-css/add-project.css
@@ -12,4 +12,4 @@ fieldset legend { color: #484848; padding: 0 5px; font-size: 1.3rem; }
 .report-tems span, i { display: block }
 .report-tems i { color: #21b4e1; font-size: .9rem; }
 
-.remove { cursor: pointer }
+.remove {color: red; cursor: pointer }
