setting edit/delete added

--- a/ProjectManagement/Views/Projects/AddProject.cshtml
+++ b/ProjectManagement/Views/Projects/AddProject.cshtml
@@ -154,7 +154,7 @@
                 </table>
             </fieldset>
 
-            <div class="row my-4">
+            <div class="row mt-3">
                 <div class="col-lg-12">
                     <div class="md-form">
                         <div class="file-field">
@@ -171,7 +171,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row mb-3">
                 <div class="col-lg-3">
                     <select id="selectDirectIndirectType" class="mdb-select md-form">
                         <option value="" disabled selected>Type</option>
@@ -298,7 +298,7 @@
             thousandsSeparator: ',', // any single char
             padFractionalZeros: false, // if true, then pads zeros at end to the length of scale
             normalizeZeros: true, // appends or removes zeros at ends
-            radix: ',', // fractional delimiter
+            radix: '.', // fractional delimiter
             mapToRadix: ['.'], // symbols to process as radix
             min: -10000,
             max: 1000000000
