--- a/ProjectManagement/Views/Settings/BeneficiaryType.cshtml
+++ b/ProjectManagement/Views/Settings/BeneficiaryType.cshtml
@@ -28,7 +28,11 @@
             {
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <strong>@item.BeneficiaryType</strong>
-                <a data-id="@item.ProjectBeneficiaryTypeId" data-value="@item.BeneficiaryType" class="far fa-edit btnUpdate"></a>
+                
+                <div>
+                    <a data-id="@item.ProjectBeneficiaryTypeId" class="far fa-trash red-text mr-3 delete"></a>
+                    <a data-id="@item.ProjectBeneficiaryTypeId" data-value="@item.BeneficiaryType" class="far fa-edit btnUpdate"></a>
+                </div>
             </li>
             }
         </ul>
@@ -76,7 +80,7 @@
         const modalContainer = $("#updateModal");
 
         //insert
-        formAdd.addEventListener("submit", function (evt) {
+        formAdd.addEventListener("submit", function(evt) {
             evt.preventDefault();
 
             const model = { BeneficiaryType: this.inputType.value }
@@ -85,7 +89,7 @@
                 url: "/Settings/PostBeneficiaryType",
                 type: "POST",
                 data: model,
-                success: function (response) {
+                success: function(response) {
                     console.log(response);
                     if (response.IsSuccess) {
                         location.reload();
@@ -94,23 +98,38 @@
 
                     error.textContent = response.Message;
                 },
-                error: function (err) {
+                error: function(err) {
                     console.log(err);
                 }
             });
         });
 
-        //on edit
+        //on edit/delete
         listContainer.addEventListener("click", function(evt) {
             const element = evt.target;
             const onUpdate = element.classList.contains("btnUpdate");
+            const onDelete = element.classList.contains("delete");
 
-            if (!onUpdate) return;
+            if (onUpdate) {
+                formUpdate.hiddenUpdateId.value = element.getAttribute("data-id");
+                formUpdate.updateType.value = element.getAttribute("data-value");
 
-            formUpdate.hiddenUpdateId.value = element.getAttribute("data-id");
-            formUpdate.updateType.value = element.getAttribute("data-value");
+                modalContainer.modal("show");
+            }
 
-            modalContainer.modal("show");
+
+            //delete
+            if (onDelete) {
+                $.ajax({
+                    url: "/Settings/DeleteBeneficiaryType",
+                    type: "POST",
+                    data: { id: element.getAttribute("data-id") },
+                    success: response => {
+                        this.parentElement.parentElement.remove();
+                    },
+                    error: err => console.log(err)
+                });
+            }
         });
 
         //update
