--- a/ProjectManagement/Views/Settings/ProjectStatus.cshtml
+++ b/ProjectManagement/Views/Settings/ProjectStatus.cshtml
@@ -5,7 +5,6 @@
     Layout = "_AdminLayout";
 }
 
-
 <div class="container">
     <h4 class="page-header mb-3">Project Status</h4>
     <div class="card mb-3 px-3 py-2">
@@ -28,7 +27,10 @@
             {
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     <strong>@item.Status</strong>
-                    <a data-id="@item.ProjectStatusId" data-value="@item.Status" class="far fa-edit btnUpdate"></a>
+                    <div>
+                        <a data-id="@item.ProjectStatusId" class="far fa-trash red-text mr-3 delete"></a>
+                        <a data-id="@item.ProjectStatusId" data-value="@item.Status" class="far fa-edit btnUpdate"></a>
+                    </div>
                 </li>
             }
         </ul>
@@ -75,7 +77,7 @@
         const modalContainer = $("#updateModal");
 
         //insert
-        formAdd.addEventListener("submit", function(evt) {
+        formAdd.addEventListener("submit", function (evt) {
             evt.preventDefault();
 
             const model = { Status: this.inputStatus.value }
@@ -84,7 +86,7 @@
                 url: "/Settings/PostProjectStatus",
                 type: "POST",
                 data: model,
-                success: function(response) {
+                success: function (response) {
                     if (response.IsSuccess) {
                         location.reload();
                         return;
@@ -92,27 +94,41 @@
 
                     error.textContent = response.Message;
                 },
-                error: function(err) {
+                error: function (err) {
                     console.log(err);
                 }
             });
         });
 
-        //on edit
-        listContainer.addEventListener("click", function(evt) {
+        //on edit/delete
+        listContainer.addEventListener("click", function (evt) {
             const element = evt.target;
             const onUpdate = element.classList.contains("btnUpdate");
+            const onDelete = element.classList.contains("delete");
 
-            if (!onUpdate) return;
+            if (onUpdate) {
+                formUpdate.hiddenUpdateId.value = element.getAttribute("data-id");
+                formUpdate.updateStatus.value = element.getAttribute("data-value");
 
-            formUpdate.hiddenUpdateId.value = element.getAttribute("data-id");
-            formUpdate.updateStatus.value = element.getAttribute("data-value");
+                modalContainer.modal("show");
+            }
 
-            modalContainer.modal("show");
+            //delete
+            if (onDelete) {
+                $.ajax({
+                    url: "/Settings/DeleteProjectStatus",
+                    type: "POST",
+                    data: { id: element.getAttribute("data-id") },
+                    success: response => {
+                        this.parentElement.parentElement.remove();
+                    },
+                    error: err => console.log(err)
+                });
+            }
         });
 
         //update
-        formUpdate.addEventListener("submit", function(evt) {
+        formUpdate.addEventListener("submit", function (evt) {
             evt.preventDefault();
 
             const model = {
@@ -124,7 +140,7 @@
                 url: "/Settings/UpdateProjectStatus",
                 type: "POST",
                 data: model,
-                success: function(response) {
+                success: function (response) {
                     if (response.IsSuccess) {
                         location.reload();
                         return;
@@ -132,7 +148,7 @@
 
                     error2.textContent = response.Message;
                 },
-                error: function(err) {
+                error: function (err) {
                     console.log(err);
                 }
             });
