--- a/ProjectManagement/Views/Settings/ReportType.cshtml
+++ b/ProjectManagement/Views/Settings/ReportType.cshtml
@@ -26,7 +26,11 @@
             {
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     <strong>@item.ReportName</strong>
-                    <a data-id="@item.ReportTypeId" data-value="@item.ReportName" class="far fa-edit btnUpdate"></a>
+
+                    <div>
+                        <a data-id="@item.ReportTypeId" class="far fa-trash red-text mr-3 delete"></a>
+                        <a data-id="@item.ReportTypeId" data-value="@item.ReportName" class="far fa-edit btnUpdate"></a>
+                    </div>
                 </li>
             }
         </ul>
@@ -73,7 +77,7 @@
         const modalContainer = $("#updateModal");
 
         //insert
-        formAdd.addEventListener("submit", function (evt) {
+        formAdd.addEventListener("submit", function(evt) {
             evt.preventDefault();
 
             const model = { ReportName: this.inputReportName.value }
@@ -82,7 +86,7 @@
                 url: "/Settings/PostReportType",
                 type: "POST",
                 data: model,
-                success: function (response) {
+                success: function(response) {
                     if (response.IsSuccess) {
                         location.reload();
                         return;
@@ -90,27 +94,41 @@
 
                     error.textContent = response.Message;
                 },
-                error: function (err) {
+                error: function(err) {
                     console.log(err);
                 }
             });
         });
 
-        //on edit
-        listContainer.addEventListener("click", function (evt) {
+        //on edit/delete
+        listContainer.addEventListener("click", function(evt) {
             const element = evt.target;
             const onUpdate = element.classList.contains("btnUpdate");
+            const onDelete = element.classList.contains("delete");
 
-            if (!onUpdate) return;
+            if (onUpdate) {
+                formUpdate.hiddenUpdateId.value = element.getAttribute("data-id");
+                formUpdate.updateReportName.value = element.getAttribute("data-value");
 
-            formUpdate.hiddenUpdateId.value = element.getAttribute("data-id");
-            formUpdate.updateReportName.value = element.getAttribute("data-value");
+                modalContainer.modal("show");
+            }
 
-            modalContainer.modal("show");
+            //delete
+            if (onDelete) {
+                $.ajax({
+                    url: "/Settings/DeleteProjectStatus",
+                    type: "POST",
+                    data: { id: element.getAttribute("data-id") },
+                    success: response => {
+                        this.parentElement.parentElement.remove();
+                    },
+                    error: err => console.log(err)
+                });
+            }
         });
 
         //update
-        formUpdate.addEventListener("submit", function (evt) {
+        formUpdate.addEventListener("submit", function(evt) {
             evt.preventDefault();
 
             const model = {
@@ -122,7 +140,7 @@
                 url: "/Settings/UpdateReportType",
                 type: "POST",
                 data: model,
-                success: function (response) {
+                success: function(response) {
                     if (response.IsSuccess) {
                         location.reload();
                         return;
@@ -130,7 +148,7 @@
 
                     error2.textContent = response.Message;
                 },
-                error: function (err) {
+                error: function(err) {
                     console.log(err);
                 }
             });
